syntax = "proto3";

message StationId{
    int32 value = 1;
}