syntax = "proto3";
import "date.proto";

message TimePeriod{
    Date initial_date = 1;
    Date final_date = 2;
}
